--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,10 @@
       text-transform: uppercase;
      background-image: linear-gradient(
        -225deg,
-       #0c0b0b 32%,
-       #080109 29%,
-       #02520d 67%,
-       #184102 100%
+       #6e0404 25%,
+       #080109 39%,
+       #6e0404 45%,
+       #184102 50%
      );
      background-size: auto auto;
      background-clip: border-box;
@@ -30,10 +30,10 @@
      /* text-fill-color: transparent; */
      -webkit-background-clip: text;
      -webkit-text-fill-color: transparent;
-     animation: textclip 20s linear infinite;
+     animation: textclip 7s linear infinite;
      display: inline-block;
          font-size: 750%;
-    margin-left: %;
+    margin-left: 12%;
          
          
          
